--- a/package.json
+++ b/package.json
@@ -59,6 +59,14 @@
     "@angular/language-service": "17.0.3",
     "@types/jasmine": "^3.6.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-angular": "^4.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^48.2.1",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-promise": "^6.1.1",
     "jasmine-core": "^3.7.0",
     "karma": "^6.3.0",
     "karma-chrome-launcher": "^3.1.0",
@@ -67,6 +75,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "ng-packagr": "^17.0.1",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.2.5",
     "typescript": "5.2.2"
   }
 }
