--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-monaco-editor-v2",
-  "version": "17.0.1",
+  "version": "17.0.0",
   "description": "Monaco Code Editor For Angular",
   "keywords": [
     "angular",
@@ -39,26 +39,26 @@
     "Thomas-Louis Simard <thomas.louis.simard@gmail.com>"
   ],
   "dependencies": {
-    "@angular/animations": "^17.0.3",
-    "@angular/common": "^17.0.3",
-    "@angular/compiler": "^17.0.3",
-    "@angular/core": "^17.0.3",
-    "@angular/forms": "^17.0.3",
-    "@angular/platform-browser": "^17.0.3",
-    "@angular/platform-browser-dynamic": "^17.0.3",
-    "@angular/router": "^17.0.3",
-    "monaco-editor": "^0.44.0",
-    "rxjs": "^7.8.1",
-    "tslib": "^2.4.0",
-    "zone.js": "^0.14.2"
+    "@angular/animations": "^17.3.0",
+    "@angular/common": "^17.3.0",
+    "@angular/compiler": "^17.3.0",
+    "@angular/core": "^17.3.0",
+    "@angular/forms": "^17.3.0",
+    "@angular/platform-browser": "^17.3.0",
+    "@angular/platform-browser-dynamic": "^17.3.0",
+    "@angular/router": "^17.3.0",
+    "monaco-editor": "^0.47.0",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.2",
+    "zone.js": "^0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.0.1",
-    "@angular/cli": "17.0.1",
-    "@angular/compiler-cli": "17.0.3",
-    "@angular/language-service": "17.0.3",
-    "@types/jasmine": "^3.6.0",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "^17.3.0",
+    "@angular/cli": "^17.3.0",
+    "@angular/compiler-cli": "^17.3.0",
+    "@angular/language-service": "^17.3.0",
+    "@types/jasmine": "~5.1.4",
+    "@types/node": "^20.11.28",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "eslint": "^8.57.0",
@@ -67,15 +67,15 @@
     "eslint-plugin-jsdoc": "^48.2.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-promise": "^6.1.1",
-    "jasmine-core": "^3.7.0",
-    "karma": "^6.3.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.3",
-    "karma-jasmine": "^4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^17.0.1",
+    "jasmine-core": "^5.1.2",
+    "karma": "~6.4.3",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^17.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
-    "typescript": "5.2.2"
+    "typescript": "5.4.2"
   }
 }
