Update package names

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-monaco-editor-v2",
+  "name": "ngx-monaco-editor-app",
   "version": "17.0.0",
   "description": "Monaco Code Editor For Angular",
   "keywords": [
