--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build-and-deploy-demo": "npm run build:prod && cp dist/editor-tester/index.html dist/editor-tester/200.html && cd dist/editor-tester && surge --domain ngx-monaco-editor-v2.surge.sh",
     "build-editor": "npm run copy:readme && ng build editor",
     "npm-publish": "npm run build-editor && bash npm-publish",
-    "copy:readme": "cp -rf README.md projects/editor/"
+    "copy:readme": "cp -rf README.md projects/editor/",
+    "prettier": "prettier --write \"./projects/**/*.{js,ts}\""
   },
   "private": false,
   "repository": {
