Install new dependencies

--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ngeenx/monaco-textmate-loader": "^1.0.12",
     "monaco-editor": "^0.47.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
+    "vscode-oniguruma": "^2.0.1",
     "zone.js": "^0.14.4"
   },
   "devDependencies": {
