--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/node": "^20.11.28",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
+    "angular-split": "^17.2.0",
     "eslint": "^8.57.0",
     "eslint-plugin-angular": "^4.1.0",
     "eslint-plugin-import": "^2.29.1",
