--- a/projects/editor/package.json
+++ b/projects/editor/package.json
@@ -27,7 +27,8 @@
   "peerDependencies": {
     "@angular/common": "^17.3.0",
     "@angular/core": "^17.3.0",
-    "monaco-editor": "^0.47.0"
+    "monaco-editor": "^0.47.0",
+    "@ngeenx/monaco-textmate-loader": "^1.0.13"
   },
   "dependencies": {
     "tslib": "^2.3.0"
