--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "importHelpers": true,
     "useDefineForClassFields": false,
     "target": "es2022",
-    "module": "es2020",
+    "module": "ESNext",
     "lib": [
       "es2018",
       "dom"
