Update package name

--- a/projects/editor/package.json
+++ b/projects/editor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ngeen/ngx-monaco-editor",
+  "name": "@ngeenx/ngx-monaco-editor",
   "version": "17.0.0",
   "private": false,
   "description": "Monaco Code Editor for Angular",
