--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ngx-monaco-editor-app",
-  "version": "17.0.1",
+  "version": "17.0.0",
   "type": "module",
-  "description": "Monaco Code Editor For Angular",
+  "description": "Angular implementation of Monaco Editor",
   "keywords": [
     "angular",
     "monaco",
